fix: overflow flixed

--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,15 @@ body {
 
 header {
   position: fixed;
-  width: 100%;
   top: 0px;
-  background-color: #FFFFFF;
+  background-color: #FFF;
   z-index: 10;
+  width:100%;
 }
+main, section{
+  width:100%;
+}
+
 
 nav {
   display: flex;
@@ -81,12 +85,15 @@ ul li {
   display: none;
   visibility: none;
 }
+.App{
+  width:100%;
+}
 
 .container {
   position: relative;
   display: flex;
   justify-content: space-evenly;
-  gap: 1rem
+  gap: 0.5rem
 }
 
 .upper-gap {
@@ -102,24 +109,29 @@ ul li {
   grid-template-columns: auto auto;
   column-gap: 5px;
   row-gap: 10px;
+  width:100%;
 }
 
 .img-3 {
   content: var(--image4);
   margin-top: 4em;
+  width:100%;
 }
 
 .img-4 {
   content: var(--image3);
+  width:100%;
 }
 
 .img-5 {
   content: var(--image6);
+  width:100%;
 }
 
 .img-6 {
   content: var(--image5);
   margin-top: -4em;
+  width:100%;
 }
 
 .intro {
@@ -239,18 +251,14 @@ ul li {
 }
 
 .section-2 {
-  padding-top: 26px;
-  height: 60px;
-  left: 313px;
-  top: 39px;
   font-family: 'Red Rose';
   font-style: normal;
   font-weight: 700;
-  font-size: 48px;
+  font-size: 38px;
   line-height: 60px;
   color: #000000;
-  text-align: center;
   width: 100%;
+  margin:1.5em;
 
 }
 
@@ -353,7 +361,9 @@ ul li {
 
 
 .section3-img{
-  content:url("./assets/images/Frame 59546-1.png")
+  content:url("./assets/images/Frame 59546-1.png");
+  width:100%;
+
 }
 
 .section-title{
@@ -422,7 +432,8 @@ background-clip: text;
 
 }
 .Brand-logo{
-  content:var(--logo2)
+  content:var(--logo2);
+  width:100%;
 }
 .footer-top-gap{
   margin-top:3em;
