--- a/src/assets/MediaQuery.css
+++ b/src/assets/MediaQuery.css
@@ -1,4 +1,5 @@
-@media screen and (max-width:46em) {
+@media screen and (max-width:46em), (max-width:68em) {
+
     .Hamburger {
         content: var(--mobile-menu);
         cursor: pointer;
@@ -16,9 +17,13 @@
         width: 50%;
         text-align: center;
     }
-    .intro{
-        margin:1em 3em;
-    }
+   .intro{
+    width:100%;
+   }
+   .nav-brand {
+    content: var(--logo1);
+    width: 80%;
+}
 
     .list-item {
         padding-top: 2em;
@@ -30,11 +35,14 @@
         right: 0px;
         height: 100vh;
         display: none;
-
+    }
+    .flex{
+        flex-direction:column;
+        justify-content: center;
     }
 
     .btn {
-        margin: 1em 3em;
+        margin: 0em 1em;
     }
 
     .btn,
@@ -47,7 +55,7 @@
     }
 
     .hero-img {
-        margin: 1.5em 3em;
+        width:100%;
     }
 
     .img-6 {
@@ -81,7 +89,7 @@
     }
 .hero-text{
     font-size:45px;
-    width: 100%;
+    width:fit-content;
     
 }
 .hero-paragraph {
@@ -90,44 +98,25 @@
   font-size: 24px;
   line-height: 35px;
   padding-top: 48px;
+  word-break:keep-all ;
 
 }
 .section-2 p{
-    margin: 1em 3em;
+    width:100%;
+    font-size:24px;
+    line-height:40px;
 
 }
-.card-container .card{
-    margin: 1em 3em;
+
+.search-session{
+    width:75%;
+}
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width:36em){
+    
+    .card {
+        grid-template-columns: auto;
+    }
 }
